--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -7,8 +7,6 @@
     margin: 0;
     padding: 0;
     border: 0;
-    /* font-size: 100%; */
-    /* vertical-align: baseline; */
     width: 100px;
     height: 100vh;
     position: fixed;
@@ -19,13 +17,26 @@
     background-image: linear-gradient(40deg,#f33e3e,#171beb);
     box-shadow: 10px 0 20px 0 rgba(0,0,0,.1),5px 0 5px rgba(0,0,0,.2);
 }
-.logout button {
-    top: 700px;
-    /* border: solid green; */
+.logout-button {
+    margin-top: 570px;
+    /* border: solid rgb(238, 210, 52); */
+
 }
 .groups {
     text-decoration: none;
     color: #fff;
     text-underline-position: none;
 
+}
+.profile > img {
+    border: solid greenyellow;
+    width: 75px;
+    height: 75px;
+}
+.username {
+    border: solid gray;
+}
+
+.groups {
+    border: solid pink;
 }
