--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -3,20 +3,22 @@
     padding-left: 100px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     flex-direction: column;
+    position: fixed;
 
 
 }
 
 .top-container {
-    /* border: solid blueviolet; */
+    border: solid yellow;
     height: 550px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .rider-info {
-    /* border: solid teal; */
+    border: solid teal;
     height: 450px;
     width: 700px;
     display: flex;
@@ -29,13 +31,13 @@
 }
 
 .profile-pic {
-    /* border: solid orange; */
+    border: solid orange;
     height: 450px;
     width: 700px;
     box-sizing: border-box;
 }
 .edit-buttons {
-    /* border: solid magenta; */
+    border: solid magenta;
     width: 1395px;
     display: flex;
     justify-content: space-around;
