--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -1,4 +1,4 @@
-.main{
+.parent-container {
     width: auto;
     padding-left: 100px;
     display: flex;
@@ -6,19 +6,17 @@
     align-content: center;
     flex-direction: column;
     position: fixed;
-
-
 }
 
 .top-container {
-    border: solid yellow;
+    /* border: solid yellow; */
     height: 550px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 .rider-info {
-    border: solid teal;
+    /* border: solid teal; */
     height: 450px;
     width: 700px;
     display: flex;
@@ -31,13 +29,13 @@
 }
 
 .profile-pic {
-    border: solid orange;
+    /* border: solid orange; */
     height: 450px;
     width: 700px;
     box-sizing: border-box;
 }
 .edit-buttons {
-    border: solid magenta;
+    /* border: solid magenta; */
     width: 1395px;
     display: flex;
     justify-content: space-around;
