--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -6,7 +6,8 @@
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59); 
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    
     align-items: center;
     padding: 10px;
 }
@@ -16,4 +17,19 @@
     justify-content: center;
     align-items: flex-end;
 }
-
+.posts {
+    color: inherit;
+    box-sizing: inherit;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    /* vertical-align: baseline; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.2);
+    border-radius: 20px;
+    background-color: rgb(241, 19, 19);
+    padding: 20px;
+}
