--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -1,16 +1,20 @@
 .parent-container {
-    width: auto;
+    width: 1300 px;
+    height: 1200px;
     padding-left: 100px;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
-    position: fixed;
+    /* position: fixed; */
+    /* box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59);
+    -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59);  */
 }
 
 .top-container {
     /* border: solid yellow; */
-    height: 550px;
+    width: 1500px;
+    height: 950px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -27,12 +31,17 @@
     flex-direction: column;
 
 }
-
 .profile-pic {
+    /* display: flex;
+    flex-direction: column; */
+    padding-top: 20px;
     /* border: solid orange; */
     height: 450px;
     width: 700px;
     box-sizing: border-box;
+}
+.profile-pic-buttons {
+    padding-top: 40px;
 }
 .edit-buttons {
     /* border: solid magenta; */
