--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -24,6 +24,8 @@
 }
 .posts {
     color: black;
+    height: 30px;
+    width: 75%;
     /* box-sizing: inherit; */
     border: 0;
     font-size: 100%;
@@ -33,8 +35,8 @@
     justify-content: space-between;
     align-items: center;
     margin: 10px 0;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.2);
+    box-shadow: 0 1px 15px 0 rgba(0,0,0,.1),0 1px 9px 0 rgba(0,0,0,.2);
     border-radius: 20px;
-    background-color: rgb(241, 19, 19);
+    /* border: solid rgb(241, 19, 19); */
     padding: 20px;
 }
