--- a/src/components/Chatroom/chatroom.css
+++ b/src/components/Chatroom/chatroom.css
@@ -1,12 +1,15 @@
-.main-chat-box {    
+.main-chat-box {
+    height: 100vh;    
     display: flex;
     justify-content: center;
     align-items: center;
     padding-left: 100px;
+    background: gray;
 }
 .chat-box {
-    height: 700px;
+    height: 500px;
     width: 1000px;
+    background: white;
     /* border: solid orange; */
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59);
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59); 
