--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -1,11 +1,14 @@
-.main {
+.main-post-container{
+    background: gray;
+    height: 100vh;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1400px;
+    /* width: 1400px; */
     margin: 0 auto;
+    padding-left: 100px;
     /* border: solid blue; */
-    box-sizing: border-box;
 }
 
 .shadow-box {
@@ -14,13 +17,16 @@
     /* border: solid orange; */
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59);
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59); 
+    background: white;
 }
 .input-box {
     width: 80%;
+    text-indent: 10px;
 }
 
 .message-input {
     width: 80%;
     border-radius: 20px;
     outline-style: none;
+    text-indent: 10px;
 }
