--- a/src/components/Register/register.css
+++ b/src/components/Register/register.css
@@ -1,22 +1,35 @@
+@import url('https://fonts.googleapis.com/css?family=Yatra+One&display=swap');
+
 .register-parent {
+    background: #B61838;
+    background: -moz-linear-gradient(-45deg, #B61838 0%, #4E4E50 40%, #4E4E50 100%);
+    background: -webkit-linear-gradient(-45deg, #B61838 0%, #4E4E50 40%, #4E4E50 100%);
+    background: linear-gradient(135deg, #B61838 0%, #4E4E50 40%, #4E4E50 100%);
     display: flex;
+    font-family: 'Yatra One';
+    color: #FFFFFF;
+    font-size: 30pt;
+    text-transform: uppercase; 
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(blue, red);
+    text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC, -7px 3px 6px rgba(206,89,55,0.61);
+    /* background: linear-gradient(blue, red); */
 }
 .register-form {
     height: 400px;
     width: 600px;
     /* border: solid red; */
+    padding-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     border-radius: 8px;
     box-shadow: 0 14px 28px 0 rgba(0, 0, 0, 0.25), 0 10px 10px 0 rgba(0, 0, 0, 0.26);
-    background: linear-gradient(10deg, yellow, green);
+    background: #333;
 
 }
 
@@ -28,8 +41,10 @@ input {
 }
 
 .buttons {
-    background: linear-gradient(150deg, #14d6dd, rgba(218, 215, 40, 0.4));
-    color: black;
+    background: linear-gradient(150deg, #4e4e50, #6f2232);
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 12pt;
     height: 1.5rem;
     outline: none;
     border-radius: 30px;
@@ -37,10 +52,10 @@ input {
 }
 
 button:hover {
-    background: linear-gradient(150deg, #67f7fc, rgba(248, 245, 85, 0.4));
+    background: linear-gradient(150deg, #7a7a7c, #b61838);
 }
 button:active {
-    background: linear-gradient(150deg, #11a3a8, rgba(150, 148, 23, 0.4));
+    background: linear-gradient(150deg, #7a7a7c, #b61838);
 }
 
 .login-box {
@@ -95,5 +110,6 @@ button:active {
 }
 .profile-input > input {
     width: 355px;
+    
     
 }
