--- a/src/components/Chatroom/chatroom.css
+++ b/src/components/Chatroom/chatroom.css
@@ -1,18 +1,34 @@
 .main-chat-box {
     height: 100vh;    
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
     padding-left: 100px;
     background: gray;
+    
+}
+.single-post {
+    background: #fff;
+    width: 600px;
+    /* border: solid red; */
+    display: flex;
+    justify-content: space-between;
+    border-radius: 15px;
+    box-shadow: 0 1px 15px 0 #02020288,0 1px 9px 0 #00000033;
+
+}
+.post-profile-pic {
+    padding: 2px;
 }
 .chat-box {
     height: 500px;
     width: 1000px;
     background: white;
+    border-radius: 15px;
     /* border: solid orange; */
-    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59);
-    -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59); 
+    box-shadow: 0px 0px 12px 0px #00000096;
+    -webkit-box-shadow: 0px 0px 12px 0px #00000096; 
     display: flex;
     justify-content: center;
     align-items: flex-end
