--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -22,7 +22,7 @@
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59); 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
     padding: 10px;
 }
@@ -31,7 +31,7 @@
     font-size: 25px;
     padding-left: 940px;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-items: flex-start;
     box-sizing: inherit;
 }
@@ -48,7 +48,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-items: flex-end;
 }
 .individual-posts {
@@ -56,11 +56,12 @@
     box-shadow: 0 1px 15px 0 rgba(0,0,0,.1),0 1px 9px 0 rgba(0,0,0,.2);
     border-radius: 15px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-decoration: none;
+    margin-bottom: 20px;
     font-size: 10pt;
-    height: 40px;
+    height: 100px;
     width: 350px;
     padding: 5px;
     text-decoration: none;
@@ -79,8 +80,10 @@
 
 }
 
+
 .post-box > button {
     width: 40px;
+    margin-left: 20px;
 }
 
 
