--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -4,7 +4,7 @@
     background: -moz-linear-gradient(-45deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
     background: -webkit-linear-gradient(-45deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
     background: linear-gradient(135deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
-    /* width: 900 px; */
+    width: 100vw;
     height: 100vh;
     padding-left: 100px;
     padding-top: 70px;
