--- a/src/components/Chatroom/chatroom.css
+++ b/src/components/Chatroom/chatroom.css
@@ -30,8 +30,58 @@
     box-shadow: 0px 0px 12px 0px #00000096;
     -webkit-box-shadow: 0px 0px 12px 0px #00000096; 
     display: flex;
-    justify-content: center;
-    align-items: flex-end
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+}
+.chat-messages {
+    width: 600px;
+    /* border: solid red; */
+    display: flex;
+    flex-direction: column
+}
+.bubble {
+    background-color: rgb(247, 244, 244);
+    border-radius: 25px;
+    box-shadow: 0 0 6px rgb(249, 250, 252);
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+}
+.bubble::before {
+    background-color: #F2F2F2;
+    content: "\00a0";
+    display: block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    transform:             rotate( 29deg ) skew( -35deg );
+        -moz-transform:    rotate( 29deg ) skew( -35deg );
+        -ms-transform:     rotate( 29deg ) skew( -35deg );
+        -o-transform:      rotate( 29deg ) skew( -35deg );
+        -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  20px;
+}
+
+.me {
+    background: blue;
+    float: left;
+    margin: 5px 70px 5px 20px;
+}
+.me::before {
+    box-shadow: -2px 2px 2px 0 rgba(250, 250, 250, 0.4);
+    left: -9px;
+}
+
+.them {
+    float: right;
+    margin: 5px 20px 5px 45px;
+}
+
+.them::after {
+    box-shadow: 2px -2px 2px 0 rgba( 178, 178, 178, .4 );
+    right: -9px;
 }
 
 .sub-chat-box {
