--- a/src/components/Chatroom/chatroom.css
+++ b/src/components/Chatroom/chatroom.css
@@ -1,16 +1,16 @@
 .main-chat-box {
-    height: 100vh;    
+    height: 100vh;
+    width: 90vw;    
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    padding-left: 100px;
     background: gray;
     
 }
 .single-post {
-    background: #fff;
-    width: 600px;
+    background: #FFFF;
+    width: 40vw;
     /* border: solid red; */
     display: flex;
     justify-content: space-between;
@@ -22,8 +22,8 @@
     padding: 2px;
 }
 .chat-box {
-    height: 500px;
-    width: 1000px;
+    height: 65vh;
+    width: 60vw;
     background: white;
     border-radius: 15px;
     /* border: solid orange; */
@@ -36,6 +36,7 @@
 }
 .chat-messages {
     width: 600px;
+    max-height: 280px;
     /* border: solid red; */
     display: flex;
     flex-direction: column
@@ -48,33 +49,22 @@
     padding: 10px 18px;
     position: relative;
     vertical-align: top;
-}
-.bubble::before {
-    background-color: #F2F2F2;
-    content: "\00a0";
-    display: block;
-    height: 16px;
-    position: absolute;
-    top: 11px;
-    transform:             rotate( 29deg ) skew( -35deg );
-        -moz-transform:    rotate( 29deg ) skew( -35deg );
-        -ms-transform:     rotate( 29deg ) skew( -35deg );
-        -o-transform:      rotate( 29deg ) skew( -35deg );
-        -webkit-transform: rotate( 29deg ) skew( -35deg );
-    width:  20px;
+    max-height: 400px;
+    overflow: scroll;
 }
 
-.me {
-    background: blue;
+.mine {
+    background: #13c76d;
     float: left;
     margin: 5px 70px 5px 20px;
 }
-.me::before {
+.mine::before {
     box-shadow: -2px 2px 2px 0 rgba(250, 250, 250, 0.4);
     left: -9px;
 }
 
 .them {
+    background: rgb(240, 221, 48);
     float: right;
     margin: 5px 20px 5px 45px;
 }
