--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -1,54 +1,55 @@
-.sub-dashboard {
+.dashboard-parent {
+    width: 90vw;
     background: #B61838;
     background: -moz-linear-gradient(-45deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
     background: -webkit-linear-gradient(-45deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
     background: linear-gradient(135deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
-    width: 1800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sub-dashboard {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
     width: 100vw;
-    border: solid black;
+    /* border: solid black; */
 
 }
 .posts-container {
     background: white;
-    height: 700px;
-    width: 1000px;
+    height: auto;
+    width: 70vw;
     /* border: solid orange; */
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59);
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59); 
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
     align-items: center;
-    padding: 10px;
-}
-.posts-container > i {
-    color: blue;
-    font-size: 25px;
-    padding-left: 940px;
-    display: flex;
-    /* justify-content: space-around; */
-    align-items: flex-start;
-    box-sizing: inherit;
+    border-radius: 25px;
+
 }
 
 .add-button-post{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: flex-end;
 }
 .posts {
-    height: 600px;
-    width: 900px;
+    height: auto;
+    max-height: 80vh;
+    overflow: scroll;
+
+    width: 50vw;
     /* border: solid red; */
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
+    justify-content: flex-start;
+
     align-items: flex-end;
 }
 .individual-posts {
@@ -58,15 +59,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    text-decoration: none;
+    /* text-decoration: none; */
     margin-bottom: 20px;
     font-size: 10pt;
     height: 100px;
     width: 350px;
     padding: 5px;
+    margin-top: 5px;
     text-decoration: none;
     transition: transform.5s;
 }
+
 
 .individual-posts:hover {
     transform: scale(1.1);
@@ -77,6 +80,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
 
 }
 
@@ -84,16 +88,9 @@
 .post-box > button {
     width: 40px;
     margin-left: 20px;
+
 }
-
-
-/* box-sizing: inherit;
-margin: 0;
-border: 0;
-font-size: 100%;
-font: inherit;
-vertical-align: baseline;
-box-shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.2);
-border-radius: 2px;
-background-color: #fff;
-padding: 20px; */
+.link-decoration {
+    text-decoration: none;
+    color: black
+}
