--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,30 +1,36 @@
 .column-parent {
-    display: flex;
-    /* height: 100vh; */
+    
+    min-width: 10vh;
+    height: auto;
+    min-height: 100vh;
+    background-image: linear-gradient(40deg,#c3073f,#1a1a1d);
+    box-shadow: 10px 0 20px 0 rgba(0,0,0,.1),5px 0 5px rgba(0,0,0,.2);
     
 }
 .top-links {
     box-sizing: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     /* border: solid black; */
     margin: 0;
     padding: 0;
     border: 0;
-    width: 100px;
+    width: 10vw;
     height: 100vh;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     color: #fff;
-    background-image: linear-gradient(40deg,#c3073f,#1a1a1d);
-    box-shadow: 10px 0 20px 0 rgba(0,0,0,.1),5px 0 5px rgba(0,0,0,.2);
 }
 .logout-button {
-    margin-top: 375px;
-    box-sizing: border-box;
+    /* margin-top: 375px; */
+    /* box-sizing: border-box; */
     /* border: solid rgb(238, 210, 52); */
     font-size: 2.5rem;
-    position: relative;
+    /* position: relative; */
     text-decoration: white;
     color: #fff
 }
@@ -33,7 +39,7 @@
 } */
 
 .groups-link {
-    padding-top: 220px;
+    /* padding-top: 220px; */
     text-decoration: none;
     color: #fff;
     text-underline-position: none;
@@ -41,15 +47,16 @@
 }
 .profile {
     /* border: solid greenyellow; */
-    max-width: 95px;
+    padding: 10px;
+    max-width: 10vw;
     height: 120px;
 }
 .profile > img {
-    max-width: 95px;
+    max-width: 10vw;
     max-height: 120px;
 }
 .groups-link > i {
     font-size: 2.5rem;
-    padding-top: 45px;
+    /* padding-top: 45px; */
 }
 
