--- a/src/components/Register/register.css
+++ b/src/components/Register/register.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Yatra+One&display=swap');
 
 .register-parent {
+    margin: 0;
     background: #B61838;
     background: -moz-linear-gradient(-45deg, #B61838 0%, #4E4E50 40%, #4E4E50 100%);
     background: -webkit-linear-gradient(-45deg, #B61838 0%, #4E4E50 40%, #4E4E50 100%);
@@ -8,18 +9,22 @@
     display: flex;
     font-family: 'Yatra One';
     color: #FFFFFF;
-    font-size: 30pt;
+    font-size: 25pt;
     text-transform: uppercase; 
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 90vw;
     text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC, -7px 3px 6px rgba(206,89,55,0.61);
     /* background: linear-gradient(blue, red); */
 }
+.everything > h1 {
+    height: 10vh;
+
+}
 .register-form {
-    height: 400px;
+    height: 70vh;
     width: 600px;
     /* border: solid red; */
     padding-top: 20px;
