--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Yatra+One&display=swap');
+$yatra: "Yatra One";
+
+
+
 .App {
   text-align: center;
   display: flex;
