--- a/src/components/Chatroom/chatroom.scss
+++ b/src/components/Chatroom/chatroom.scss
@@ -1,3 +1,4 @@
+@import '../../App.scss';
 .main-chat-box {
     height: 100vh;
     width: 90vw;    
@@ -12,6 +13,7 @@
     background: #FFFF;
     width: 40vw;
     /* border: solid red; */
+    font-family: $yatra;
     display: flex;
     justify-content: space-between;
     border-radius: 15px;
@@ -19,13 +21,14 @@
 
 }
 .post-profile-pic {
-    padding: 2px;
+    margin: 7px;
 }
 .chat-box {
     height: 65vh;
     width: 60vw;
     background: white;
     border-radius: 15px;
+    font-family: $yatra;
     /* border: solid orange; */
     box-shadow: 0px 0px 12px 0px #00000096;
     -webkit-box-shadow: 0px 0px 12px 0px #00000096; 
@@ -35,42 +38,58 @@
     align-items: center;
 }
 .chat-messages {
-    width: 600px;
+    width: 50vw;
     max-height: 280px;
     /* border: solid red; */
     display: flex;
-    flex-direction: column
+    align-items: center;
+    flex-direction: column;
+    overflow: scroll;
+    height: auto;
 }
 .bubble {
-    background-color: rgb(247, 244, 244);
+    font-family: $yatra;
+    /* background-color: #4e35dd; */
     border-radius: 25px;
-    box-shadow: 0 0 6px rgb(249, 250, 252);
+    box-shadow: 0 0 9px rgb(41, 41, 41);
     display: inline-block;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     padding: 10px 18px;
     position: relative;
     vertical-align: top;
-    max-height: 400px;
-    overflow: scroll;
+    height: auto;
+    /* overflow: scroll; */
+    /* border: solid rgb(0, 217, 255); */
 }
 
 .mine {
-    background: #13c76d;
-    float: left;
+    background: #3398f7;
+    left: 15vw;
     margin: 5px 70px 5px 20px;
+    display: flex;
+    justify-content: flex-end;
+    width: 15vw;
+    height: auto;
 }
 .mine::before {
-    box-shadow: -2px 2px 2px 0 rgba(250, 250, 250, 0.4);
-    left: -9px;
+    box-shadow: 0px 0px 12px 0 #fafafa66;
+    left: -2px;
 }
 
 .them {
-    background: rgb(240, 221, 48);
-    float: right;
-    margin: 5px 20px 5px 45px;
+    background: #fafaf8;
+    right: 15vw;
+    margin: 5px 60px 5px 90px;
+    display: flex;
+    justify-content: flex-start;
+    width: 15vw;
+    height: auto;
 }
 
 .them::after {
-    box-shadow: 2px -2px 2px 0 rgba( 178, 178, 178, .4 );
+    /* box-shadow: 2px 2px 2px 0 #91171766; */
     right: -9px;
 }
 
@@ -81,9 +100,16 @@
     align-items: center; 
     align-content: space-between;
     padding: 12px;
-    /* border: solid red; */
+    
+    /* border: solid rgb(0, 255, 34); */
+}
+.chat-messages > textarea {
+    box-shadow: 0 1px 15px 0 #02020288,0 1px 9px 0 #00000033;
+    padding: 5px;
+    border: none;
 }
 .back-button {
-    padding-left: 40px;
+    margin-left: 40px;
     font-size: 35px;
 }
+
