--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -1,6 +1,5 @@
 .column-parent {
-    
-    min-width: 10vh;
+    max-width: 100vh;
     height: auto;
     min-height: 100vh;
     background-image: linear-gradient(40deg,#c3073f,#1a1a1d);
@@ -13,50 +12,41 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /* border: solid black; */
-    margin: 0;
-    padding: 0;
-    border: 0;
+    align-content: center;
+    // border: solid black; 
     width: 10vw;
     height: 100vh;
-    position: sticky;
-    top: 0;
-    left: 0;
-    /* padding-top: 20px; */
     color: #fff;
+    position: sticky;
 }
 .logout-button {
-    /* margin-top: 375px; */
-    /* box-sizing: border-box; */
+    position: sticky;
     /* border: solid rgb(238, 210, 52); */
     font-size: 2.5rem;
-    /* position: relative; */
     text-decoration: white;
     color: #fff
 }
-/* .logout-button > i {
-    color: white;
-} */
 
 .groups-link {
-    /* padding-top: 220px; */
     text-decoration: none;
     color: #fff;
     text-underline-position: none;
-    /* border: solid pink; */
+    // border: solid pink; 
 }
 .profile {
-    /* border: solid greenyellow; */
-    padding: 10px;
-    max-width: 10vw;
+    // border: solid greenyellow; 
+    margin-top: 10px;
+    max-width: 8vw;
     height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .profile > img {
-    max-width: 10vw;
-    max-height: 120px;
+    width: 9vw;
+    max-height: 9vh;;
 }
 .groups-link > i {
     font-size: 2.5rem;
-    /* padding-top: 45px; */
 }
 
