--- a/src/components/Post/post.scss
+++ b/src/components/Post/post.scss
@@ -1,27 +1,33 @@
+@import '../../App.scss';
+
 .main-post-container{
     background: gray;
     height: 100vh;
-    box-sizing: border-box;
+    width: 90vw;
+    /* box-sizing: border-box; */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width: 1400px; */
     margin: 0 auto;
-    padding-left: 100px;
     /* border: solid blue; */
 }
 
 .shadow-box {
-    height: 700px;
-    width: 1000px;
+    height: 75vh;
+    width: 60vw;
     /* border: solid orange; */
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59);
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.59); 
     background: white;
+    font-family: $yatra;
 }
 .input-box {
     width: 80%;
     text-indent: 10px;
+}
+.title-container > input {
+    font-family: $yatra;
+    font-size: 12pt;
 }
 
 .message-input {
@@ -29,4 +35,7 @@
     border-radius: 20px;
     outline-style: none;
     text-indent: 10px;
+    font-family: $yatra;
+    font-size: 12pt;
+    height: 25vh;
 }
