--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -1,10 +1,12 @@
+@import '../../App.scss';
+
 .parent-container {
     box-sizing: border-box;
     background: #B61838;
     background: -moz-linear-gradient(-45deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
     background: -webkit-linear-gradient(-45deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
     background: linear-gradient(135deg, #B61838 0%, #1d8de9 40%, #1d8de9 100%);
-    width: 90vw;
+    width: 100vw;
     height: 100vh;
     /* padding-left: 100px;
     padding-top: 70px; */
@@ -27,19 +29,15 @@
     height: 450px;
     width: 30vw;
     display: flex;
+    font-family: $yatra;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    /* padding-left: 40px;
-    padding-top: 70px; */
     align-items: flex-start;
     flex-direction: column;
 
 }
 .profile-pic {
-    /* display: flex;
-    flex-direction: column; */
-    /* padding-top: 20px; */
     /* border: solid orange; */
     max-width: 50vw;
     max-height: 450px;
