--- a/src/components/Register/register.scss
+++ b/src/components/Register/register.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Yatra+One&display=swap');
+@import '../../App.scss';
 
 .register-parent {
     margin: 0;
@@ -15,9 +15,8 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    width: 90vw;
+    width: 100vw;
     text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC, -7px 3px 6px rgba(206,89,55,0.61);
-    /* background: linear-gradient(blue, red); */
 }
 .everything > h1 {
     height: 10vh;
@@ -25,7 +24,7 @@
 }
 .register-form {
     height: 70vh;
-    width: 600px;
+    width: 60vw;
     /* border: solid red; */
     padding-top: 20px;
     display: flex;
@@ -49,6 +48,7 @@ input {
     background: linear-gradient(150deg, #4e4e50, #6f2232);
     color: #FFFFFF;
     font-weight: bold;
+    font-family: $yatra;
     font-size: 12pt;
     height: 1.5rem;
     outline: none;
@@ -64,7 +64,7 @@ button:active {
 }
 
 .login-box {
-    width: 75%;
+    width: 45vw;
     display: flex;
     justify-content: space-evenly;
     align-items:flex-end;
@@ -72,33 +72,40 @@ button:active {
     /* border: 1px solid black; */
     
 }
+.login-box > input {
+    width: 15vw;
+}
 .login-button {
     /* border: solid orangered; */
-    width: 75%;
+    width: 70vw;
     padding: 5px 0 30px;
     display: flex;
     justify-content: center;
 
 }
 .name-box {
-    width: 75%;
+    width: 45vw;
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
     align-content: center;
     /* border: solid yellow; */
 }
-.username-email > input {
-    width: 355px;
+.name-box > input {
+    width: 15vw;
 }
 
+
 .username-email {
-    width: 75%;
+    width: 45vw;
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
     align-content: center;
     /* border: solid green; */
+}
+.username-email > input {
+    width: 35vw;
 }
 
 .button {
@@ -106,15 +113,18 @@ button:active {
 }
 
 .password-box {
-    width: 75%;
+    width: 45vw;
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
     align-content: center;
     /* border: solid orange; */
 }
+.password-box > input {
+    width: 15vw;
+}
 .profile-input > input {
-    width: 355px;
+    width: 35vw;
     
     
 }
