--- a/src/components/Resorts/resorts.scss
+++ b/src/components/Resorts/resorts.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Yatra+One&display=swap');
+@import '../../App.scss';
 
 .resort-main {
   width: 90vw;
+  height: auto;
   background: #1d8de9;
   background: -moz-linear-gradient(-45deg, #B61838 0%, #1d8de9 30%, #B61838 100%);
   background: -webkit-linear-gradient(-45deg, #B61838 0%, #1d8de9 30%, #B61838 100%);
@@ -16,7 +17,6 @@
   flex-direction: row;
   max-width: 1150px;
   margin: 0 auto;
-  padding-left: 100px;
   /* border: solid orange; */
 }
 
@@ -24,7 +24,6 @@
     max-width: 295px;
     height: 200px;
     margin: 20px;
-    /* transition: transform.1s; */
     /* border: solid red; */
     
   }
@@ -40,13 +39,13 @@
 .resort-header {
   width: 100%wv;
   box-sizing: border-box;
-  padding-left: 100px;
-  height: 90px;
+  height: auto;
+  max-height: 15vh;
   /* border: solid green; */
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Yatra One';
+  font-family: $yatra;
   color: #FFFFFF;
   font-size: 18pt;
   text-transform: uppercase; 
@@ -75,6 +74,6 @@
   text-decoration-style: none;
   color: #FFFFFF;
   text-underline-position: none;
-  font-family: "Yatra One"
+  font-family: $yatra;
 }
 
