--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -20,11 +20,12 @@
     position: sticky;
 }
 .logout-button {
-    position: sticky;
+    // position: sticky;
     /* border: solid rgb(238, 210, 52); */
     font-size: 2.5rem;
     text-decoration: white;
     color: #fff
+
 }
 
 .groups-link {
@@ -41,6 +42,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: sticky;
 }
 .profile > img {
     width: 9vw;
